RESOLVED FIXED218291
[Testing] Remove requirement of adding new SPI for each preference that needs testing (WebKitLegacy Windows)
https://bugs.webkit.org/show_bug.cgi?id=218291
Summary [Testing] Remove requirement of adding new SPI for each preference that needs...
Sam Weinig
Reported 2020-10-28 09:57:15 PDT
[Testing] Remove requirement of adding new SPI for each preference that needs testing (WebKitLegacy Windows)
Attachments
Patch (4.53 KB, patch)
2020-10-28 09:57 PDT, Sam Weinig
ews-feeder: commit-queue-
Patch (4.54 KB, patch)
2020-10-28 10:10 PDT, Sam Weinig
no flags
Patch (4.57 KB, patch)
2020-10-28 11:25 PDT, Sam Weinig
no flags
Patch (13.30 KB, patch)
2020-10-28 12:27 PDT, Sam Weinig
no flags
Patch (13.64 KB, patch)
2020-10-28 15:54 PDT, Sam Weinig
no flags
Patch (13.92 KB, patch)
2020-10-28 19:02 PDT, Sam Weinig
no flags
Sam Weinig
Comment 1 2020-10-28 09:57:32 PDT Comment hidden (obsolete)
Sam Weinig
Comment 2 2020-10-28 10:10:17 PDT Comment hidden (obsolete)
Sam Weinig
Comment 3 2020-10-28 11:25:08 PDT Comment hidden (obsolete)
Sam Weinig
Comment 4 2020-10-28 12:27:10 PDT
Sam Weinig
Comment 5 2020-10-28 13:53:03 PDT
Brent, any idea why the Apple Windows bot has this error: error C2039: 'setBoolPreferenceForTesting': is not a member of 'IWebPreferencesPrivate8. Is there something else I need to do to add functions to IWebPreferencesPrivate8 other than what I am doing?
Brent Fulgham
Comment 6 2020-10-28 15:33:03 PDT
I don't see any problems with your code. I suspect we need to force a clean build because of some dependency issue in the Windows build.
Brent Fulgham
Comment 7 2020-10-28 15:42:51 PDT
Comment on attachment 412559 [details] Patch r=me. The Windows build failure is not because of this change, but is a symptom of a dependency problem in the IDL generation on Windows. We may need to force a clean build once this lands.
Sam Weinig
Comment 8 2020-10-28 15:54:54 PDT
Sam Weinig
Comment 9 2020-10-28 19:02:48 PDT
EWS
Comment 10 2020-10-29 11:18:15 PDT
Committed r269157: <https://trac.webkit.org/changeset/269157> All reviewed patches have been landed. Closing bug and clearing flags on attachment 412600 [details].
Radar WebKit Bug Importer
Comment 11 2020-10-29 11:19:21 PDT
Fujii Hironori
Comment 12 2020-12-24 17:59:49 PST
Filed: Bug 220145 – [WinCairo][DumpRenderTree] Some JS tests are timing out only in Debug builds since r269157
Note You need to log in before you can comment on or make changes to this bug.