[Testing] Remove requirement of adding new SPI for each preference that needs testing (WebKitLegacy Windows) https://bugs.webkit.org/show_bug.cgi?id=218291

Reviewed by Brent Fulgham.

Source/WebKitLegacy/win:

Expose a set of setters for DumpRenderTree to use when setting preferences
by string, matching WebKitLegacy for cocoa platforms and modern WebKit.

* Interfaces/IWebPreferencesPrivate.idl:
* WebPreferences.cpp:
(WebPreferences::setBoolPreferenceForTesting):
(WebPreferences::setUInt32PreferenceForTesting):
(WebPreferences::setDoublePreferenceForTesting):
(WebPreferences::setStringPreferenceForTesting):
* WebPreferences.h:

Tools:

Adopt set*PreferenceForTesting functions to match DumpRenderTree for cocoa platforms, and
make it so that only TestOptions.cpp needs to be touched to add support for new preference
in tests.

Also adds some helpers to convert between string types and use RetainPtr in a few more places.

* DumpRenderTree/win/DumpRenderTree.cpp:
(toUTF8):
(toBSTR):
(resetWebPreferencesToConsistentValues):
(boolWebPreferenceFeatureValue):
(setWebPreferencesForTestOptions):
(runTest):


Canonical link: https://commits.webkit.org/231030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269157 268f45cc-cd09-0410-ab3c-d52691b4dbfc